delete compilation files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
+#ignore compilation files
 *.aux
 *.idx
 *.log
 *.syntex.gz
 *.toc
 *.odt
+*.bbl
+*.blg
+*.syntex.gz
+*.mtc*
+*.toc
+*.maf
+*.flg
+*.odt
+/supports
+/Figures
+
 
