--- a/06-Analyse/Makefile
+++ b/06-Analyse/Makefile
@@ -6,4 +6,11 @@ figs : $(PDFS_FROM_SVG)
 %.pdf : %.svg
 	rsvg-convert -f pdf -o $@ $<
 
+%.pdf : %.svg
+	rsvg-convert -f pdf -o $@ $<
 
+
+pdf :
+	pdflatex -jobname=chapter-06 source.tex
+	biber chapter-06
+	pdflatex -jobname=chapter-06 source.tex
